samples/_failures_safe/1761527318_3e4f52_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_93f3e6d3.c: In function ‘main’:
./samples/SAFE/__tmp_93f3e6d3.c:147:5: error: ‘buffer_’ undeclared (first use in this function); did you mean ‘Buffer’?
  147 |     buffer_
      |     ^~~~~~~
      |     Buffer
./samples/SAFE/__tmp_93f3e6d3.c:147:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_93f3e6d3.c:147:12: error: expected ‘;’ at end of input
  147 |     buffer_
      |            ^
      |            ;
./samples/SAFE/__tmp_93f3e6d3.c:147:5: error: expected declaration or statement at end of input
  147 |     buffer_
      |     ^~~~~~~
